--- a/agent/.env.example
+++ b/agent/.env.example
@@ -6,6 +6,7 @@ ANTHROPIC_API_KEY=sk-...
 SERPER_API_KEY=
 SENDGRID_API_KEY=
 SENDGRID_FROM_EMAIL=noreply@example.com
+TAVILY_API_KEY=
 
 # Logging
 RUST_LOG=info
