--- a/fissio/crates/fissio/Cargo.toml
+++ b/fissio/crates/fissio/Cargo.toml
@@ -14,12 +14,14 @@ fissio-core = { workspace = true }
 fissio-engine = { workspace = true }
 fissio-llm = { workspace = true }
 fissio-tools = { workspace = true }
+fissio-editor = { workspace = true, optional = true }
 
 [features]
 default = ["openai", "anthropic", "tools-web"]
 openai = []
 anthropic = []
 tools-web = []
+editor = ["dep:fissio-editor"]
 
 [dev-dependencies]
 tokio = { workspace = true }
